Fix main stage spacing top

--- a/themes/mao/src/scss/components/_stage.scss
+++ b/themes/mao/src/scss/components/_stage.scss
@@ -10,6 +10,14 @@
   }
 }
 
+.c-stage__main {
+  margin-top: setting-spacing(xxl);
+
+  @media (min-width: setting-breakpoint(m)) {
+    margin-top: setting-spacing(xxxl);
+  }
+}
+
 .c-stage__footer {
   margin-top: setting-spacing(xxl);
 
